Bug 13207 - hda-intel: dmesg warning should probably be prefixed with "hda-intel: "
Summary: hda-intel: dmesg warning should probably be prefixed with "hda-intel: "
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 low
Assignee: Takashi Iwai
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-29 10:55 UTC by Sami Liedes
Modified: 2009-05-19 10:23 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.29.2
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Sami Liedes 2009-04-29 10:55:36 UTC
hda-intel printed a KERN_WARNING string "Too big adjustment 32" with no prefix of any kind to indicate it came from hda-intel. I think it probably should be prefixed with the driver name. Viz:

------------------------------------------------------------
[  101.520218] ppdev: user-space parallel port driver
[  146.171958] Too big adjustment 32
[  146.176030] Too big adjustment 32
[  146.379610] hda-intel: IRQ timing workaround is activated for card #1. Suggest a bigger bdl_pos_adj.
------------------------------------------------------------

The string lives in sound/pci/hda/hda_intel.c .
Comment 1 Takashi Iwai 2009-05-19 10:23:04 UTC
Fixed in sound git tree now.

Note You need to log in before you can comment on or make changes to this bug.